--- a/BlazorKurs/_Imports.razor
+++ b/BlazorKurs/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BlazorKurs
 @using BlazorKurs.Shared
+@using BlazorKurs.Pages.TraningBlazor.TraningBlazorComponent
+@using BlazorKurs.Models
+
