--- a/BlazorKurs/Pages/Counter.razor
+++ b/BlazorKurs/Pages/Counter.razor
@@ -1,12 +1,15 @@
-﻿@page "/counter"
+﻿@page "/counter/{Baslik?}"
 
-<h1>Counter</h1>
+<h1>Counter - @Baslik</h1>
 
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
+    [Parameter]
+    public string Baslik { get; set; } = "";
+
     private int currentCount = 0;
 
     private void IncrementCount()
